# physics

./: README.md  physics.cabal
src/Numeric/Physics/: Particle.hs
